# multislice

./: LICENSE  Multislice.ipynb  README.md  prop.py  pyproject.toml  setup.py
docs-incomplete/: Multislice.ipynb
multislice/: __init.py__  __init__.py  fft_utils.py  prop.py  prop_utils.py  wisdom  wisdom.pickle
multislice.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
multislice/.ipynb_checkpoints/: prop_utils-checkpoint.py
tests/: Multislice.ipynb  export_fft_wisdom.ipynb  export_fft_wisdom.py  ming_output.npy  obj_fft.py  prop_old.py  temp_wisdom.json  temp_wisdom.pickle  test_fft.ipynb  test_fft.py  test_info.txt  test_new_obj.ipynb  test_prop.ipynb  test_tube_particles_modified.py  test_wisdom_import.py  wisdom.pickle
tests/.ipynb_checkpoints/: Multislice-checkpoint.ipynb  export_fft_wisdom-checkpoint.ipynb  obj_fft-checkpoint.py  test_fft-checkpoint.ipynb  test_new_obj-checkpoint.ipynb  test_prop-checkpoint.ipynb  test_wisdom_import-checkpoint.ipynb
wisdom/: wisdom.pickle
